    iterors.
  o `ichain(...)` now has a companion function `icollapse(it)` which takes
    an iterable (rather than `...`).
  o New iteror methods for `as.numeric`, `as.vector', `as.character`,
    and `as.logical`.
  o Random number iterators like `irunif`, `isample` and so on can now
    maintain a private seed value, so that interleaving with other
    iterators does not affect reproducibility. By default each newly
    constructed random number iterator will generate an _independent_
    pseudo-random stream (using the [nextRNGStream] mechanism).
  o New method `ienumerate.array` can iterate over
    arbitrary /multiple margins, providing a vector index.

Changes from the above packages:
  o `iterators::ifilter()` is renamed to `ikeep()` and the order of arguments
    changed to have the iterable first (the better to work with R's
    pipe operator.) `ifilterfalse()` is similarly renamed to `idrop()`.
    `idropwhile()` and `ikeepwhile()` also take the iterable first..
  o There were conflicting definitions of `icount()`; in this package
    `icount(n)` only counts whole numbers starting with 1.
    For control over start, stop and step size use `iseq()`.
  o `irep_len` is `irep(length.out=n)`
  o There were conflicting definitions of `imap`. In this package:
    * `imap(f, ...)` maps several iterators over a function taking several
      arguments, analogous to `mapply`.
    * `iapply(iter, f, ...)` maps a single iteror over a function of one
      argument, analogous to "lapply".
  o Traversing arrays:
    * Iterating over slices of an array, as `iterators::iapply` did, is
      here done by the constructor method `iteror.array`.
  o `itertools2::iunique_lastseen()` is renamed to `idedupe()`.
  o `iconsume(it, 0)` will consume zero elements. To consume the entire
    output of an iteror use `iconsume(it, Inf)`
  o New method `ienumerate.array()` can enumerate with array indices over
    arbitrary margins.