@@ -11,9 +11,9 @@ Authors@R: c(person("Peter", "Meilstrup",
              person("John A.", "Ramey", role=c("aut", "cph")),
              person("Kayla", "Schaefer", role="aut"),
              person("Hadley", "Wickham", role="aut"))
-Description: A fresh take on iterators in R. Designed to be cross-compatible with the 'iterators' package, but using the 'nextOr' method will offer better performance and more compact code. With batteries included: includes a collection of iterator constructors and combinators ported from the 'iterators', 'itertools', and 'itertools2' packages.
+Description: A fresh take on iterators in R. Designed to be cross-compatible with the 'iterators' package, but using the 'nextOr' method will offer better performance as well as more compact code. With batteries included: includes a collection of iterator constructors and combinators ported and refined from the 'iterators', 'itertools', and 'itertools2' packages.
 Depends:
-    R (>= 3.6),
+    R (>= 3.6)
 Imports:
     rlang
 Encoding: UTF-8
